--- a/css/timeline.css
+++ b/css/timeline.css
@@ -128,6 +128,7 @@ text-transform: none !important;
 			background-repeat: repeat-x;
 			background-size: 2px 2px;
 			background-position: 0 @base-font-size+2;
+			text-shadow: -2px -1px 0 white, 2px -1px 0 white, -2px 1px 0 white, 2px 1px 0 white;
 			&:hover,
 			&:focus {
 				color:@color-theme;
@@ -1740,7 +1741,7 @@ font-style: normal;
   filter: alpha(opacity=50);
   -khtml-opacity: 0.5;
   -moz-opacity: 0.5;
-  opacity: 1; /*ti change the opacity of a image background*/
+  opacity: 0.5;
   background: no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -1822,7 +1823,7 @@ font-style: normal;
   text-align: center;
 }
 .tl-slide-text-only .tl-slide-content-container .tl-slide-content .tl-text {
-  max-width: 50%;
+  max-width: 80%;
   width: 80%;
   display: block;
   margin-left: auto;
@@ -1833,7 +1834,7 @@ font-style: normal;
 .tl-slide.tl-full-image-background,
 .tl-slide.tl-full-color-background {
   color: #FFF !important;
-  text-shadow: none !important;
+  text-shadow: 1px 1px 1px #000 !important;
 }
 .tl-slide.tl-full-image-background p,
 .tl-slide.tl-full-color-background p,
@@ -1850,7 +1851,7 @@ font-style: normal;
 .tl-slide.tl-full-image-background h6,
 .tl-slide.tl-full-color-background h6 {
   color: #FFF !important;
-  text-shadow: none !important; /*removes the drop shadow on text*/
+  text-shadow: 1px 1px 1px #000 !important;
 }
 .tl-slide.tl-full-image-background a,
 .tl-slide.tl-full-color-background a,
