--- a/css/timeline.css
+++ b/css/timeline.css
@@ -140,12 +140,12 @@ text-transform: none !important;
 }
 .tl-timeline p a:hover,
 .tl-timeline p a:focus {
-  font-family: "trade-gothic-next", sans-serif;
+  font-family: "trade-gothic-next", sans-serif !important
   color: #8f6eae;
 }
 @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
   .tl-timeline p a {
-    font-family: "trade-gothic-next", sans-serif;
+    font-family: "trade-gothic-next", sans-serif !important
     text-decoration: underline;
     background-image: none;
     text-shadow: none;
@@ -158,21 +158,21 @@ text-transform: none !important;
 }
 .tl-timeline b,
 .tl-timeline strong {
-  font-family: "trade-gothic-next", sans-serif;
+  font-family: "trade-gothic-next", sans-serif !important
   font-weight: bold;
 }
 .tl-timeline i,
 .tl-timeline em {
-  font-family: "trade-gothic-next", sans-serif;
+  font-family: "trade-gothic-next", sans-serif !important
   font-style: italic;
 }
 .tl-timeline a {
-  font-family: "trade-gothic-next", sans-serif;
+  font-family: "trade-gothic-next", sans-serif !important
   text-decoration: none;
   color: #E30613;
 }
 .tl-timeline a:hover {
-  font-family: "trade-gothic-next", sans-serif;
+  font-family: "trade-gothic-next", sans-serif !important
   text-decoration: underline;
   color: #E30613;
 }
@@ -180,7 +180,7 @@ text-transform: none !important;
 .tl-timeline .tl-credit,
 .tl-timeline .tl-slidenav-next,
 .tl-timeline .tl-slidenav-previous {
-  font-family: "trade-gothic-next", sans-serif;
+  font-family: "trade-gothic-next", sans-serif !important
   font-size: 11px;
   line-height: 11px;
 }
@@ -191,7 +191,7 @@ text-transform: none !important;
   color: #000;
 }
 .tl-timeline .tl-makelink {
-  font-family: "trade-gothic-next", sans-serif;
+  font-family: "trade-gothic-next", sans-serif !important
   word-break: break-all;
   word-break: break-word;
   -webkit-hyphens: auto;
@@ -200,7 +200,7 @@ text-transform: none !important;
 }
 .tl-timeline blockquote,
 .tl-timeline blockquote p {
-  font-family: "trade-gothic-next", sans-serif;
+  font-family: "trade-gothic-next", sans-serif !important
   color: #999999;
   font-size: 24px;
   line-height: 24px;
@@ -211,7 +211,7 @@ text-transform: none !important;
 }
 .tl-timeline blockquote cite,
 .tl-timeline blockquote p cite {
-  font-family: "trade-gothic-next", sans-serif;
+  font-family: "trade-gothic-next", sans-serif !important
   font-size: 11px;
   color: #666666;
   display: block;
@@ -223,7 +223,7 @@ text-transform: none !important;
   content: "\2014";
 }
 .tl-timeline blockquote p:before {
-  font-family: "trade-gothic-next", sans-serif;
+  font-family: "trade-gothic-next", sans-serif !important
   content: open-quote;
   display: inline-block;
   font-size: 28px;
@@ -232,7 +232,7 @@ text-transform: none !important;
   margin-right: 5px;
 }
 .tl-timeline blockquote p:after {
-  font-family: "trade-gothic-next", sans-serif;
+  font-family: "trade-gothic-next", sans-serif !important
   content: close-quote;
   display: inline-block;
   font-size: 28px;
@@ -241,15 +241,15 @@ text-transform: none !important;
   margin-left: 3px;
 }
 .tl-timeline blockquote {
-  font-family: "trade-gothic-next", sans-serif;
+  font-family: "trade-gothic-next", sans-serif !important
   margin: 10px;
 }
 .tl-timeline blockquote p {
-  font-family: "trade-gothic-next", sans-serif;
+  font-family: "trade-gothic-next", sans-serif !important
   margin: 0;
 }
 .tl-timeline .vcard {
- font-family: "trade-gothic-next", sans-serif;
+ font-family: "trade-gothic-next", sans-serif !important
   font-size: 15px;
   line-height: 15px;
   margin-bottom: 15px;
@@ -329,7 +329,7 @@ text-transform: none !important;
 }
 .tl-timeline .tl-note {
   display: block;
-  font-family: "Trade-gothic-next", sans-serif;
+  font-family: "trade-gothic-next", sans-serif !important
   font-style: italic;
   background-color: #fcf8e3;
   font-size: 15px;
@@ -346,6 +346,7 @@ text-transform: none !important;
   .tl-timeline h1,
   .tl-timeline h2,
   .tl-timeline h3 {
+    "trade-gothic-next", sans-serif !important
     font-size: 28px;
     line-height: 28px;
   }
@@ -1046,7 +1047,7 @@ text-transform: none !important;
 } /*This below changes the time marker on the timeline before state */
 .tl-timemarker .tl-timemarker-content-container {
   position: absolute;
-  background-color: #591e30; /*Colour of the prestate flads on the timeline*/
+  background-color: #591e30; /*Colour of the prestate flags on the timeline*/
   border: 0;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
@@ -1095,7 +1096,7 @@ text-transform: none !important;
   -webkit-box-orient: vertical;
   text-overflow: ellipsis;
   font-size: 16px; /*Size of the flag text on the timeline*/
-  line-height: 16px;
+  line-height: 20px;
   height: 100%;
   overflow: hidden;
   font-family: "Trade-gothic-next", sans-serif;
@@ -1738,10 +1739,10 @@ font-style: normal;
   z-index: -1;
   overflow: hidden;
   display: none;
-  filter: alpha(opacity=50);
-  -khtml-opacity: 0.5;
-  -moz-opacity: 0.5;
-  opacity: 0.5;
+  filter: alpha(opacity=100); /*change this to change the opacity of the background with an image*/
+  -khtml-opacity: 1; /*change this to change the opacity of the background with an image*/
+  -moz-opacity: 1; /*change this to change the opacity of the background with an image*/
+  opacity: 1; /*change this to change the opacity of the background with an image*/
   background: no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -1752,7 +1753,7 @@ font-style: normal;
   display: table;
   table-layout: fixed;
   height: 100%;
-  z-index: 1;
+  z-index: 1; *
 }
 .tl-slide .tl-slide-content-container {
   display: table-cell;
@@ -1834,7 +1835,7 @@ font-style: normal;
 .tl-slide.tl-full-image-background,
 .tl-slide.tl-full-color-background {
   color: #FFF !important;
-  text-shadow: 1px 1px 1px #000 !important;
+
 }
 .tl-slide.tl-full-image-background p,
 .tl-slide.tl-full-color-background p,
@@ -1851,7 +1852,6 @@ font-style: normal;
 .tl-slide.tl-full-image-background h6,
 .tl-slide.tl-full-color-background h6 {
   color: #FFF !important;
-  text-shadow: 1px 1px 1px #000 !important;
 }
 .tl-slide.tl-full-image-background a,
 .tl-slide.tl-full-color-background a,
@@ -1863,7 +1863,6 @@ font-style: normal;
 .tl-slide.tl-full-color-background blockquote,
 .tl-slide.tl-full-image-background blockquote p,
 .tl-slide.tl-full-color-background blockquote p {
-  text-shadow: 1px 1px 1px #000;
   color: #ffffff;
 }
 .tl-slide.tl-full-image-background a:hover,
@@ -1876,28 +1875,27 @@ font-style: normal;
 .tl-slide.tl-full-image-background .tl-credit,
 .tl-slide.tl-full-color-background .tl-credit {
   color: #FFF !important;
-  text-shadow: 1px 1px 1px #000 !important;
 }
 .tl-slide.tl-full-image-background .tl-media-twitter blockquote,
 .tl-slide.tl-full-color-background .tl-media-twitter blockquote,
 .tl-slide.tl-full-image-background .tl-media-blockquote blockquote,
 .tl-slide.tl-full-color-background .tl-media-blockquote blockquote {
   color: #FFF !important;
-  text-shadow: 1px 1px 1px #000 !important;
+
 }
 .tl-slide.tl-full-image-background .tl-media-twitter blockquote p,
 .tl-slide.tl-full-color-background .tl-media-twitter blockquote p,
 .tl-slide.tl-full-image-background .tl-media-blockquote blockquote p,
 .tl-slide.tl-full-color-background .tl-media-blockquote blockquote p {
   color: #FFF !important;
-  text-shadow: 1px 1px 1px #000 !important;
+
 }
 .tl-slide.tl-full-image-background .vcard a,
 .tl-slide.tl-full-color-background .vcard a,
 .tl-slide.tl-full-image-background .vcard .nickname,
 .tl-slide.tl-full-color-background .vcard .nickname {
   color: #FFF !important;
-  text-shadow: 1px 1px 1px #000 !important;
+
 }
 /* Full Image Background
 ================================================== */
@@ -1908,7 +1906,7 @@ font-style: normal;
   -o-background-size: cover;
   background-size: cover;
   background-position: center 25%;
-  text-shadow: 1px 1px 2px #000;
+
 }
 .tl-slide.tl-full-image-background p,
 .tl-slide.tl-full-image-background h1,
@@ -1917,19 +1915,18 @@ font-style: normal;
 .tl-slide.tl-full-image-background h4,
 .tl-slide.tl-full-image-background h5,
 .tl-slide.tl-full-image-background h6 {
-  text-shadow: 1px 1px 2px #000;
+
 }
 .tl-slide.tl-full-image-background .tl-caption,
 .tl-slide.tl-full-image-background .tl-credit {
-  text-shadow: 1px 1px 2px #000;
+
 }
 .tl-slide.tl-full-image-background .tl-media-twitter blockquote,
 .tl-slide.tl-full-image-background .tl-media-blockquote blockquote {
-  text-shadow: 1px 1px 2px #000 !important;
 }
 .tl-slide.tl-full-image-background .tl-media-twitter blockquote p,
 .tl-slide.tl-full-image-background .tl-media-blockquote blockquote p {
-  text-shadow: 1px 1px 2px #000 !important;
+
 }
 /* Color Background
 ================================================== */
@@ -2416,15 +2413,12 @@ font-style: normal;
 .tl-media-shadow {
   position: relative;
   z-index: 1;
-  -webkit-box-shadow: 0 12px 10px -10px rgba(0, 0, 0, 0.6);
-  -moz-box-shadow: 0 12px 10px -10px rgba(0, 0, 0, 0.6);
-  box-shadow: 0 12px 10px -10px rgba(0, 0, 0, 0.6);
+
 }
 .tl-slide.tl-full-image-background a,
 .tl-slide.tl-full-color-background a,
 .tl-slide.tl-full-image-background .vcard a,
 .tl-slide.tl-full-color-background .vcard a {
-  text-shadow: 1px 1px 1px #000;
   color: #ffffff;
 }
 .tl-slide.tl-full-image-background a:hover,
@@ -2559,7 +2553,6 @@ font-style: normal;
 .tl-full-image-background .tl-text p,
 .tl-full-color-background .tl-text p {
   color: #00000 !important; /*colour of the copy on a coloured background*/
-  text-shadow: 1px 1px 2px #000;
 }
 .tl-full-image-background .tl-text .tl-headline-date,
 .tl-full-color-background .tl-text .tl-headline-date,
