--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1095,7 +1095,7 @@ text-transform: none !important;
   box-orient: vertical;
   -webkit-box-orient: vertical;
   text-overflow: ellipsis;
-  font-size: 15px; /*Size of the flag text on the timeline*/
+  font-size: 16px; /*Size of the flag text on the timeline*/
   line-height: 20px;
   height: 100%;
   overflow: hidden;
@@ -1788,7 +1788,8 @@ font-style: normal;
 .tl-slide .tl-slide-content-container .tl-slide-content .tl-text {
   direction: ltr;
   width: 50%;
-  max-width: 50%;
+  background-color: rgba(89, 30, 48, 0.8);
+ max-width: 50%;
   min-width: 120px;
   padding: 0 20px 0 20px;
   display: table-cell;
