--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1789,9 +1789,10 @@ font-style: normal;
   direction: ltr;
   width: 50%;
   background-color: rgba(89, 30, 48, 0.8);
+  border-radius: 5px;
  max-width: 50%;
   min-width: 120px;
-  padding: 0 20px 0 20px;
+  padding: 20px 20px 10px 20px;
   display: table-cell;
   vertical-align: middle;
   text-align: left;
