--- a/css/timeline.css
+++ b/css/timeline.css
@@ -109,8 +109,8 @@ text-transform: none !important;
   font-family: "trade-gothic-next", sans-serif !important;
   margin-top: 5px;
   margin-bottom: 10px;
-  font-size: 15px;
-  line-height: 1.42857143;
+  font-size: 17px;
+  line-height: 1.5;
   color: #E30613;
 }
 .tl-timeline p.lead {
