--- a/css/timeline.css
+++ b/css/timeline.css
@@ -2111,7 +2111,7 @@ font-style: normal;
 .tl-slidenav-next .tl-slidenav-content-container.tl-slidenav-inverted .tl-slidenav-title,
 .tl-slidenav-previous .tl-slidenav-content-container.tl-slidenav-inverted .tl-slidenav-description,
 .tl-slidenav-next .tl-slidenav-content-container.tl-slidenav-inverted .tl-slidenav-description {
-  color: #591e30;
+  color: #FFFFFF;
   text-shadow: 1px 1px 1px #333;
 }
 /* ICONS
