--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1744,10 +1744,11 @@ font-style: normal;
   -moz-opacity: 1; /*change this to change the opacity of the background with an image*/
   opacity: 1; /*change this to change the opacity of the background with an image*/
   background: no-repeat center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  -webkit-background-size: auto 100%; /* Makes background fit the height */
+  -moz-background-size: auto 100%; /* Makes background fit the height */
+  -o-background-size: auto 100%; /* Makes background fit the height */
+  background-size: auto 100%; /* Makes background fit the height */
+  background-attachment: fixed; /* Ensures it stays fixed during scroll */
 }
 .tl-slide .tl-slide-scrollable-container {
   display: table;
