--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1735,7 +1735,7 @@ font-style: normal;
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 135vh;
   z-index: -1;
   overflow: hidden;
   display: none;
